1.添加 trace 级日志 cmake开关 2.日志修改

--- a/galay/common/CMakeLists.txt
+++ b/galay/common/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 3.21)
 project(common)
 
+if(${ENABLE_LOG_TRACE})
+    add_definitions(-DENABLE_TRACE)
+    message(STATUS "Enable log trace")
+endif()
+
 file(GLOB SRC_LIST "*.cc")
 
 list(LENGTH SRC_LIST SRC_LIST_LEN)
