--- a/galay/common/CMakeLists.txt
+++ b/galay/common/CMakeLists.txt
@@ -11,7 +11,7 @@ file(GLOB SRC_LIST "*.cc")
 list(LENGTH SRC_LIST SRC_LIST_LEN)
 if(SRC_LIST_LEN GREATER 0)
     add_library(${PROJECT_NAME} OBJECT ${SRC_LIST})
-    link_libraries(${PROJECT_NAME})
+    link_libraries(${PROJECT_NAME} pthread)
 endif()
 install(TARGETS ${PROJECT_NAME} EXPORT GalayTargets)
 
