--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,29 @@ else()
 endif()
 message(STATUS "Install prefix: ${CMAKE_INSTALL_PREFIX}")
 
+# 检测编译器类型
+if(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" OR CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
+    set(COMPILER_IS_CLANG ON)
+    message(STATUS "Using Clang compiler")
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+    set(COMPILER_IS_GCC ON)
+    message(STATUS "Using GCC compiler")
+endif()
+
+
 if(ENABLE_DEBUG)
     set(CMAKE_BUILD_TYPE Debug)
+
+    # 根据编译器设置不同的调试选项
+    if(COMPILER_IS_CLANG)
+        set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -ggdb3 -gdwarf-4 -fstandalone-debug -Wall -Wextra" CACHE STRING "Debug flags" FORCE)
+        set(CMAKE_C_FLAGS_DEBUG "-g3 -O0 -ggdb3 -gdwarf-4 -fstandalone-debug -Wall -Wextra" CACHE STRING "Debug flags" FORCE)
+    else()
+        set(CMAKE_CXX_FLAGS_DEBUG "-g3 -O0 -ggdb3 -gdwarf-4 -Wall -Wextra" CACHE STRING "Debug flags" FORCE)
+        set(CMAKE_C_FLAGS_DEBUG "-g3 -O0 -ggdb3 -gdwarf-4 -Wall -Wextra" CACHE STRING "Debug flags" FORCE)
+    endif()
+    set(CMAKE_EXE_LINKER_FLAGS_DEBUG "-g" CACHE STRING "Debug linker flags" FORCE)
+    set(CMAKE_SHARED_LINKER_FLAGS_DEBUG "-g" CACHE STRING "Debug linker flags" FORCE)
     message(STATUS "Debug mode enabled")
 else()
     set(CMAKE_BUILD_TYPE Release)
@@ -37,6 +58,16 @@ set(DEPEND_LIBS kernel utils algorithm common)
 add_compile_options(-fPIC)
 
 include_directories(${PROJECT_SOURCE_DIR})
+
+if(ENABLE_DEBUG)
+    # 根据编译器设置全局编译选项
+    if(COMPILER_IS_CLANG)
+        add_compile_options(-g3 -O0 -fstandalone-debug)
+    else()
+        add_compile_options(-g3 -O0)
+    endif()
+    add_link_options(-g)
+endif()
 
 #添加子目录
 add_subdirectory(galay)
@@ -72,6 +103,22 @@ else()
                             $<$<CONFIG:Debug>:-g>
                             $<$<CONFIG:RealWithDebInfo>:-g>)
     endif()
+endif()
+
+if(ENABLE_DEBUG)
+    # 根据编译器为目标库设置编译选项
+    if(COMPILER_IS_CLANG)
+        target_compile_options(galay PRIVATE 
+            $<$<CONFIG:Debug>:-g3 -O0 -ggdb3 -gdwarf-4 -fstandalone-debug -Wall -Wextra>
+        )
+    else()
+        target_compile_options(galay PRIVATE 
+            $<$<CONFIG:Debug>:-g3 -O0 -ggdb3 -gdwarf-4 -Wall -Wextra>
+        )
+    endif()
+    target_link_options(galay PRIVATE 
+        $<$<CONFIG:Debug>:-g>
+    )
 endif()
 
 set_target_properties(galay PROPERTIES
