--- a/galay/common/CMakeLists.txt
+++ b/galay/common/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 3.21)
 project(common)
 
-if(${ENABLE_LOG_TRACE})
+if(ENABLE_SYSTEM_LOG)
+  add_definitions(-DENABLE_SYSTEM_LOG)
+  if(ENABLE_LOG_TRACE)
     add_definitions(-DENABLE_TRACE)
     message(STATUS "Enable log trace")
+  endif()
 endif()
 
 file(GLOB SRC_LIST "*.cc")
