1.修复 clang 协程 initial suspend_always导致的 lambda 捕获列表失效问题 2.修复 mac编译问题

--- a/galay/common/CMakeLists.txt
+++ b/galay/common/CMakeLists.txt
@@ -14,7 +14,7 @@ file(GLOB SRC_LIST "*.cc")
 list(LENGTH SRC_LIST SRC_LIST_LEN)
 if(SRC_LIST_LEN GREATER 0)
     add_library(${PROJECT_NAME} OBJECT ${SRC_LIST})
-    link_libraries(${PROJECT_NAME} pthread)
+    link_libraries(${PROJECT_NAME} pthread ${SSL_LIB} ${CRYPTO_LIB})
 endif()
 install(TARGETS ${PROJECT_NAME} EXPORT GalayTargets)
 
