--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,8 +1,11 @@
 project(test)
 file(GLOB SRC_LIST *.cc)
 
+if(CMAKE_SYSTEM_NAME STREQUAL "Darwin")
+  list(REMOVE_ITEM SRC_LIST ${CMAKE_CURRENT_SOURCE_DIR}/test_aio.cc)
+endif()
 
-set(COMMON_LIB ssl crypto)
+set(COMMON_LIB ${SSL_LIB} ${CRYPTO_LIB})
 
 if(ENABLE_SYSTEM_LOG)
   add_definitions(-DENABLE_SYSTEM_LOG)
