1.增加 mac的 File 2.优化Bytes 实现

--- a/galay/kernel/CMakeLists.txt
+++ b/galay/kernel/CMakeLists.txt
@@ -19,7 +19,7 @@ if(${USE_IO_URING})
 elseif(${USE_AIO})
   find_library(AIO_LIB NAMES aio)
   list(APPEND DEPEND_LIBS ${AIO_LIB})
-elseif(${USE_GCD})
+else()
   
 endif()
 
