feat(server): 引入服务器策略支持并重构构建器
新增 `ServerDefn.hpp` 定义默认TCP backlog大小和服务器策略枚举。
为 `TcpServer`、`TcpSslServer` 和 `UdpServer` 添加 `listenOn` 和 `useStrategy` 方法，
用于设置监听地址和运行策略。修改各服务器的 Builder 类，使用独立字段替代内部 server 对象，
统一通过 RuntimeBuilder 构建 Runtime 实例。调整 `startCoChecker` 接口，移除布尔开关参数，
直接通过时间间隔控制协程管理器启动。修复 NetEvent.cc 中连接错误码未正确处理的问题，
增强连接结果判断逻辑。

同时更新测试代码适配新的 Builder 接口，并修正部分注释与默认值描述。

--- a/galay/utils/CMakeLists.txt
+++ b/galay/utils/CMakeLists.txt
@@ -9,7 +9,7 @@ if(ENABLE_SYSTEM_LOG)
   endif()
 endif()
 
-file(GLOB SRC_LIST "*.cc")
+file(GLOB SRC_LIST "*.cc" "*.hpp")
 
 if(ENABLE_NLOHMANN_JSON)
     message(STATUS "USE_NLOHMANN_JSON ON")
